--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
             <h1>Olena Onyshkiv. Portfolio</h1>
             <h2>I'm a Web Developer</h2>
             <hr/>
-            <h3><a href="../4.3 HTML Porfolio Project/assets/images/movie-ranking.png">Movie ranking project</a></h3>
-            <img src="../4.3 HTML Porfolio Project/assets/images/movie-ranking.png" height="200" alt="My Best Movies"/>
+            <h3><a href="movie-ranking.png">Movie ranking project</a></h3>
+            <img src="movie-ranking.png" height="200" alt="My Best Movies"/>
 
 
-            <h3><a href="../4.3 HTML Porfolio Project/assets/images/birthday-invite.png">Birthday Invite Project</a></h3>
-            <img src="../4.3 HTML Porfolio Project/assets/images/birthday-invite.png" height="200" alt="Birthday Invite Project"></a>
+            <h3><a href="birthday-invite.png">Birthday Invite Project</a></h3>
+            <img src="birthday-invite.png" height="200" alt="Birthday Invite Project"></a>
             <hr/>
 
-            <a href="../4.3 HTML Porfolio Project/public/about.html">About Me</a>
-            <a href="../4.3 HTML Porfolio Project/public/contact.html">Contact Me</a>
+            <a href="about.html" onclick=“window.open(‘about.html’, ‘_self’;”>About Me</a>
+            <a href="contact.html" onclick=“window.open(‘contact.html’, ‘_self’;”>Contact Me</a>
 
         </body>
         </head>
